tests/lean/matchErrorLocation.lean.expected.out
matchErrorLocation.lean:5:10-5:14: error: type mismatch
  h he
has type
  False : Prop
but is expected to have type
  α : Type ?u
